# notabletsar-wip

./: .clangd.template  .gitignore  Makefile  README-chn.md  README.md  build_common.mk
common/: adapt.c  adapt.h  host_info.h
host-linux/: .gitignore  CMakeLists.txt  README-chn.md  README.md  dlg_lsusb.c  dlg_lsusb.h  host_info.cc  libusb_stuffs.h  main.c
host-linux/l10n/: ja.po  zh_CN.po
inc/: protocol.h
java/com/notabletsar/app/: ControllerActivity.java
jni/: com_notabletsar_app_ControllerActivity.h  sender.c
res/values/: strings.xml
res/values-ja/: strings.xml
res/values-zh/: strings.xml
